kubernetes/ingress/deployment-canary.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: spring-boot-canary
spec:
  replicas: 1      
  template:
    metadata:
      name: spring-boot 
      labels:
        app: spring-boot
        env: canary
    spec:
      containers:
       - name: spring-boot
         image: marceloweb/spring-boot-demo:canary
         ports:
         - name: spring-boot
           containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: spring-boot-canary-service
  labels:
    app: spring-boot
    env: canary
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: spring-boot
    env: canary
