kubernetes/ingress/deployment-production.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: spring-boot-production
spec:
  replicas: 3      
  template:
    metadata:
      name: spring-boot
      labels:
        app: spring-boot      
        env: production
    spec:
      containers:
       - name: spring-boot
         image: marceloweb/spring-boot-demo:latest
         ports:
         - name: spring-boot         
           containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: spring-boot-production-service
  labels:
    app: spring-boot
    env: production
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: spring-boot
    env: production
