kubernetes/ingress/ingress-production.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: app-ingress
spec:
  backend:
    serviceName: spring-boot-production-service
    servicePort: 80
